src/objects/TaxRollOwner__c.object
<CustomObject>
    <fields>
        <fullName>account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Tax Roll Owners</relationshipLabel>
        <relationshipName>TaxRollOwners</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ownerAddress__c</fullName>
        <label>Owner Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ownerCity__c</fullName>
        <label>Owner City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ownerName__c</fullName>
        <label>Owner Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ownerState__c</fullName>
        <label>Owner State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ownerZip__c</fullName>
        <label>Owner Zip</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>uid__c</fullName>
        <description>Unique Id for this record based on a combination of the first 50 characters of the following fields:
Owner Name
Owner Address
Owner City
Owner State
Owner Zip</description>
        <label>UID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Tax Roll Owner</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>ownerName__c</columns>
        <columns>ownerAddress__c</columns>
        <columns>ownerCity__c</columns>
        <columns>ownerState__c</columns>
        <columns>ownerZip__c</columns>
        <columns>account__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>TRON-{0000000000}</displayFormat>
        <label>Tax Roll Owner Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Tax Roll Owners</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>